# ParleyPy

./: .gitignore  .pypirc  pyproject.toml
ParleyPy/: __init__.py  parliament.py
